# docs/swagger.yaml
@@ -88,6 +88,28 @@ paths:
       summary: User Login
       tags:
       - UserApi
+  /logout:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: 成功
+          schema:
+            $ref: '#/definitions/r.Response'
+        "40002":
+          description: 参数错误
+          schema:
+            $ref: '#/definitions/r.Response'
+        "40003":
+          description: 系统错误
+          schema:
+            $ref: '#/definitions/r.Response'
+      summary: Logout
+      tags:
+      - UserApi
   /refresh_token:
     get:
       consumes:
